flux/apps/int/grafana/svc-blocky-proxy.yaml
# It's not possible to make REST API calls to Blocky from Grafana's dashboards, as Blocky API works via plain HTTP.
# To overcome this, we'll make redirects in the backend from "https://grafana.vpn.lab.com/proxy/blocky/*" to "http://10.45.100.100:4000/*"
apiVersion: v1
kind: Service
metadata:
  name: blocky-api-external
spec:
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: blocky-api-external
  labels:
    kubernetes.io/service-name: blocky-api-external
addressType: IPv4
ports:
  - port: 4000
endpoints:
  - addresses:
      - "10.45.100.100"
    conditions:
      ready: true
